updated NBs, added GIFs for NBs

--- a/CRAGIG_combined_lanes/Notebooks/Exploratory Plots.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Exploratory Plots.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -38,17 +38,17 @@
    },
    "outputs": [],
    "source": [
-    "vcf_filename = \"cragig_l1_25_c82_biall_NOmaf_onesnp.vcf\"\n",
-    "str_filename = \"cragig_l1_25_c82_biall_NOmaf_onesnp_inames.str\"\n",
-    "fis_filename = \"Fis_cragig_l1_25_c82_002_20170710_fpop.txt\"\n",
-    "ho_filename = \"Ho_cragig_l1_25_c82_002_20170710_fpop.txt\"\n",
-    "hs_filename = \"Hs_cragig_l1_25_c82_20170710_fpop.txt\"\n",
-    "clust_sim = \"82%\" # remove after 20170711"
+    "vcf_filename = \"cragig_l1_25_c94_biall_maf_onesnp.vcf\"\n",
+    "str_filename = \"cragig_l1_25_c94_biall_maf_onesnp_inames.str\"\n",
+    "fis_filename = \"Fis_cragig_l1_25_c94_MAF_20170711_fpop.txt\"\n",
+    "ho_filename = \"Ho_cragig_l1_25_c94_MAF_20170711_fpop.txt\"\n",
+    "hs_filename = \"Hs_cragig_l1_25_c94_MAF_20170711_fpop.txt\"\n",
+    "clust_sim = \"94%\" # remove after 20170711"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -59,17 +59,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_l1_25_c82_outfiles/new_outfiles\n"
+      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_l1_25_c94_outfiles/new_outfiles\n"
      ]
     }
    ],
    "source": [
-    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_l1_25_c82_outfiles/new_outfiles/"
+    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_l1_25_c94_outfiles/new_outfiles/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -80,9 +80,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fis_cragig_l1_25_c82_002_20170710_fpop.txt\r\n",
-      "Ho_cragig_l1_25_c82_002_20170710_fpop.txt\r\n",
-      "Hs_cragig_l1_25_c82_20170710_fpop.txt\r\n"
+      "Fis_cragig_l1_25_c94_002_20170710_fpop.txt\r\n",
+      "Fis_cragig_l1_25_c94_MAF_20170711_fpop.txt\r\n",
+      "Ho_cragig_l1_25_c94_002_20170710_fpop.txt\r\n",
+      "Ho_cragig_l1_25_c94_MAF_20170711_fpop.txt\r\n",
+      "Hs_cragig_l1_25_c94_20170710_fpop.txt\r\n",
+      "Hs_cragig_l1_25_c94_MAF_20170711_fpop.txt\r\n"
      ]
     }
    ],
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -201,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -271,7 +274,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
