added R script for pop gen stats, updated NBs

--- a/CRAGIG_combined_lanes/Notebooks/Exploratory Plots.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Exploratory Plots.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -38,17 +38,17 @@
    },
    "outputs": [],
    "source": [
-    "vcf_filename = \"cragig_l1_25_c94_biall_maf_onesnp.vcf\"\n",
-    "str_filename = \"cragig_l1_25_c94_biall_maf_onesnp_inames.str\"\n",
-    "fis_filename = \"Fis_cragig_l1_25_c94_MAF_20170711_fpop.txt\"\n",
-    "ho_filename = \"Ho_cragig_l1_25_c94_MAF_20170711_fpop.txt\"\n",
-    "hs_filename = \"Hs_cragig_l1_25_c94_MAF_20170711_fpop.txt\"\n",
-    "clust_sim = \"94%\" # remove after 20170711"
+    "vcf_filename = \"CG_l1_25_c76_H_biall_NOmaf_oneSNP.vcf\"\n",
+    "str_filename = \"CG_l1_25_c76_H_biall_NOmaf_oneSNP_inames_fpop.str\"\n",
+    "fis_filename = \"Fis_20170711_fpop.txt\"\n",
+    "ho_filename = \"Ho_20170711_fpop.txt\"\n",
+    "hs_filename = \"Hs_20170711_fpop.txt\"\n",
+    "clust_sim = \"76%\" # remove after 20170711"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -59,17 +59,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_l1_25_c94_outfiles/new_outfiles\n"
+      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c76_H_outfiles/new_outfiles\n"
      ]
     }
    ],
    "source": [
-    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_l1_25_c94_outfiles/new_outfiles/"
+    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c76_H_outfiles/new_outfiles/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -80,12 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fis_cragig_l1_25_c94_002_20170710_fpop.txt\r\n",
-      "Fis_cragig_l1_25_c94_MAF_20170711_fpop.txt\r\n",
-      "Ho_cragig_l1_25_c94_002_20170710_fpop.txt\r\n",
-      "Ho_cragig_l1_25_c94_MAF_20170711_fpop.txt\r\n",
-      "Hs_cragig_l1_25_c94_20170710_fpop.txt\r\n",
-      "Hs_cragig_l1_25_c94_MAF_20170711_fpop.txt\r\n"
+      "Fis_20170711_fpop.txt  Ho_20170711_fpop.txt  Hs_20170711_fpop.txt\r\n"
      ]
     }
    ],
@@ -96,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -111,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -169,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -191,7 +186,7 @@
     "        fis_list.append(float(fis))\n",
     "    \n",
     "plt.hist(fis_list, bins = np.arange(-1.2,1.2,.05)-.025)\n",
-    "plt.ylim(0,1300) # REMOVE AFTER 20170710\n",
+    "\n",
     "\n",
     "plt.title(fis_filename + \"\\n\" + clust_sim)\n",
     "\n",
@@ -204,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -227,7 +222,6 @@
     "        ho_list.append(float(ho))\n",
     "    \n",
     "plt.hist(ho_list, bins = np.arange(0,1.2,.05)-.025)\n",
-    "plt.ylim(0,1300)\n",
     "\n",
     "plt.title(ho_filename + \"\\n\" + clust_sim)\n",
     "plt.xlabel(\"Ho\")\n",
@@ -238,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -260,7 +254,6 @@
     "        hs_list.append(float(hs))\n",
     "    \n",
     "plt.hist(hs_list, bins = np.arange(0,1.2,.025)-.0125)\n",
-    "plt.ylim(0,800)\n",
     "\n",
     "plt.title(hs_filename + \"\\n\" + clust_sim)\n",
     "\n",
