updated pop gen stats R script

--- a/CRAGIG_combined_lanes/Notebooks/Filtering.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Filtering.ipynb
@@ -628,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I made an R script that will read the structure file in (for now, rea)"
+    "I made an R script that will read the structure file in with adegenet, and then calculate Ho, Hs, and Fis across loci. Script here."
    ]
   },
   {
