--- a/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots_Streamline.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots_Streamline.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -25,17 +25,17 @@
    },
    "outputs": [],
    "source": [
-    "assembly_name = \"CG_l1_25_c90_H\"\n",
+    "assembly_name = \"CG_l1_25_c84_H\"\n",
     "filter_biall = \"TRUE\"\n",
     "filter_MAF = \"FALSE\"\n",
-    "dir_outfiles = \"/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c90_H_outfiles/\"\n",
+    "dir_outfiles = \"/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c84_H_outfiles/\"\n",
     "date = \"20170713\"\n",
-    "plot_subtitle = \"90%\""
+    "plot_subtitle = \"84%\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
      "output_type": "stream",
      "text": [
       "Number of individuals after adding fpop = 28.0\n",
-      "Number of loci = 10853\n"
+      "Number of loci = 8505\n"
      ]
     }
    ],
@@ -218,9 +218,9 @@
     "# names of pop gen stats files + name for plot title\n",
     "assembly_name_plots = assembly_name\n",
     "str_filename = str_inames_fpop_file\n",
-    "fis_filename = \"Fis_\" + date + \".txt\"\n",
-    "ho_filename = \"Ho_\" + date + \".txt\"\n",
-    "hs_filename = \"Hs_\" + date + \".txt\"\n",
+    "fis_filename = \"Fis_\" + str_inames_fpop_file[:-4] + \"_\" + date + \".txt\"\n",
+    "ho_filename = \"Ho_\" + str_inames_fpop_file[:-4] + \"_\" + date + \".txt\"\n",
+    "hs_filename = \"Hs_\" + str_inames_fpop_file[:-4] + \"_\" + date + \".txt\"\n",
     "\n",
     "# make read depth plot\n",
     "vcf_file_fplot = open(one_VCF,\"r\") # change!\n",
@@ -268,7 +268,7 @@
     "    \n",
     "plt.hist(locus_rd_avs, bins = np.arange(0,max(locus_rd_avs)+1,4)-2)\n",
     "\n",
-    "title = hs_filename\n",
+    "title = one_VCF\n",
     "if len(plot_subtitle) > 1:\n",
     "    title += \"\\n\" + plot_subtitle\n",
     "plt.title(title)\n",
@@ -276,7 +276,7 @@
     "plt.xlabel(\"Read depth\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "\n",
-    "plt.savefig('rd_' + assembly_name_plots + '.png')\n",
+    "plt.savefig('rd_' + filt_VCF_out + '.png')\n",
     "plt.close()\n",
     "\n",
     "# make Fis plot\n",
@@ -297,7 +297,7 @@
     "plt.hist(fis_list, bins = np.arange(-1.2,1.2,.05)-.025)\n",
     "plt.ylim(0,7000) # REMOVE AFTER 20170715\n",
     "\n",
-    "title = hs_filename\n",
+    "title = \"Fis in \" + filt_VCF_out\n",
     "if len(plot_subtitle) > 1:\n",
     "    title += \"\\n\" + plot_subtitle\n",
     "plt.title(title)\n",
@@ -305,7 +305,7 @@
     "plt.xlabel(\"Fis\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "\n",
-    "plt.savefig(\"Fis_\" + assembly_name_plots + '.png')\n",
+    "plt.savefig(\"Fis_\" + filt_VCF_out + '.png')\n",
     "plt.close()\n",
     "\n",
     "# make Ho plot\n",
@@ -327,14 +327,14 @@
     "plt.ylim(0,6000) # REMOVE AFTER 20170715\n",
     "\n",
     "\n",
-    "title = hs_filename\n",
+    "title = \"Ho in \" + filt_VCF_out\n",
     "if len(plot_subtitle) > 1:\n",
     "    title += \"\\n\" + plot_subtitle\n",
     "plt.title(title)\n",
     "\n",
     "plt.xlabel(\"Ho\")\n",
     "plt.ylabel(\"Frequency\")\n",
-    "plt.savefig(\"Ho_\" + assembly_name_plots + '.png')\n",
+    "plt.savefig(\"Ho in \" + filt_VCF_out + '.png')\n",
     "plt.close()\n",
     "\n",
     "# make Hs plot\n",
@@ -355,15 +355,14 @@
     "plt.hist(hs_list, bins = np.arange(0,1.2,.025)-.0125)\n",
     "plt.ylim(0,6000)\n",
     "\n",
-    "\n",
-    "title = hs_filename\n",
+    "title = \"Hs in \" + filt_VCF_out\n",
     "if len(plot_subtitle) > 1:\n",
     "    title += \"\\n\" + plot_subtitle\n",
     "plt.title(title)\n",
     "\n",
     "plt.xlabel(\"Hs\")\n",
     "plt.ylabel(\"Frequency\")\n",
-    "plt.savefig(\"Hs_\" + assembly_name_plots + '.png')\n",
+    "plt.savefig(\"Hs_\" + filt_VCF_out + '.png')\n",
     "plt.close()"
    ]
   },
@@ -371,7 +370,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
