remade two GIFs for NB

--- a/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
@@ -1393,19 +1393,19 @@
     "\n",
     "#### Before filtering for MAF of .05:\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Fis_beforeMAF_20170715.gif?raw=true)\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Ho_beforeMAF_20170715.gif?raw=true)\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Hs_beforeMAF_20170715.gif?raw=true)\n",
     "\n",
     "#### After filtering for MAF of .05:\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Fis_afterMAF_20170715.gif?raw=true)\n",
     "\n",
-    "![img]()\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Ho_afterMAF_20170715.gif?raw=true)\n",
     "\n",
-    "![img]()\n"
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Hs_afterMAF_20170715.gif?raw=true)\n"
    ]
   },
   {
