added img for NB and updated NB

--- a/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**20170715**\n",
     "\n",
-    "Clustering similarity changed the number of loci but did not significantly change patterns in Fis or heterozygosity."
+    "Clustering similarity changed the number of loci but did not significantly change patterns in Fis or heterozygosity. The number of loci after filtering at 94% clustering similarity was about twice as many as 76% similarity "
    ]
   },
   {
@@ -1354,6 +1354,35 @@
     "step_labels = ['Prefilter','Rem duplcates','Max indels','Max SNPs','Max shared het','Min samples','Max alleles']\n",
     "\n",
     "# plot together\n",
+    "plt.plot(steps, c94_steps, label = '94%')\n",
+    "plt.plot(steps, c92_steps, label = '92%')\n",
+    "plt.plot(steps, c90_steps, label = '90%')\n",
+    "plt.plot(steps, c88_steps, label = '88%')\n",
+    "plt.plot(steps, c86_steps, label = '86%')\n",
+    "plt.plot(steps, c84_steps, label = '84%')\n",
+    "plt.plot(steps, c82_steps, label = '82%')\n",
+    "plt.plot(steps, c80_steps, label = '80%')\n",
+    "plt.plot(steps, c78_steps, label = '78%')\n",
+    "plt.plot(steps, c76_steps, label = '76%')\n",
+    "\n",
+    "plt.legend(loc = 'upper right')\n",
+    "\n",
+    "plt.title(\"Retained loci at each filtering step in ipyrad\\n25 scallops, 10 different clustering thresholds\")\n",
+    "plt.ylabel(\"Retained loci\")\n",
+    "plt.xticks(steps, step_labels, rotation=30)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# closer look at\n",
     "plt.plot(steps, c94_steps, label = '94%')\n",
     "plt.plot(steps, c92_steps, label = '92%')\n",
     "plt.plot(steps, c90_steps, label = '90%')\n",
