added imgs for NB, updated summary in NB

--- a/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
@@ -13,7 +13,32 @@
     "\n",
     "**20170715**\n",
     "\n",
-    "Clustering similarity changed the number of loci but did not significantly change patterns in Fis or heterozygosity. The number of loci after filtering at 94% clustering similarity was about twice as many as 76% similarity "
+    "**[1]** Number of loci\n",
+    "\n",
+    "Clustering similarity changed the number of loci. The number of loci that came out of ipyrad at 94% clustering similarity was about twice as many as at 76% similarity.  \n",
+    "\n",
+    "**[2]** Number of loci lost at filtering steps\n",
+    "\n",
+    "The number of loci lost at each filtering step in ipyrad did not differ very much in pattern.\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/ret_loci_steps_H_20170715.png?raw=true)\n",
+    "\n",
+    "**[3]** Fis & heterozygosity\n",
+    "\n",
+    "Although the number of loci increases with clustering similarity, patterns in Fis & heterozygosity did not change with clustering similarity. For example, here is Fis before filtering for minor allele frequency and observed heterozygosity before filtering for minor allele frequency.\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Fis_beforeMAF_20170715.gif?raw=true)\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Ho_beforeMAF_20170715.gif?raw=true)\n",
+    "\n",
+    "**[4]** Ilut plot\n",
+    "\n",
+    "Clustering similarity did have a small effect on the proportions of homozygote and heterozygote genotypes. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "One remaining concern is that I believe I allowed for polyploid genotypes in my assemblies by setting the \"max alleles\" parameter arbitrarily high to 10, but observed no polyploid genotypes. I wonder if VCF files inherently filter for diploidy or whether there is something I have yet to understand about parameters in ipyrad. I assume there are some, as a result of paralogs or repeat units, so I'm still interested in learning if I did something wrong there.\n"
    ]
   },
   {
@@ -1354,35 +1379,6 @@
     "step_labels = ['Prefilter','Rem duplcates','Max indels','Max SNPs','Max shared het','Min samples','Max alleles']\n",
     "\n",
     "# plot together\n",
-    "plt.plot(steps, c94_steps, label = '94%')\n",
-    "plt.plot(steps, c92_steps, label = '92%')\n",
-    "plt.plot(steps, c90_steps, label = '90%')\n",
-    "plt.plot(steps, c88_steps, label = '88%')\n",
-    "plt.plot(steps, c86_steps, label = '86%')\n",
-    "plt.plot(steps, c84_steps, label = '84%')\n",
-    "plt.plot(steps, c82_steps, label = '82%')\n",
-    "plt.plot(steps, c80_steps, label = '80%')\n",
-    "plt.plot(steps, c78_steps, label = '78%')\n",
-    "plt.plot(steps, c76_steps, label = '76%')\n",
-    "\n",
-    "plt.legend(loc = 'upper right')\n",
-    "\n",
-    "plt.title(\"Retained loci at each filtering step in ipyrad\\n25 scallops, 10 different clustering thresholds\")\n",
-    "plt.ylabel(\"Retained loci\")\n",
-    "plt.xticks(steps, step_labels, rotation=30)\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# closer look at\n",
     "plt.plot(steps, c94_steps, label = '94%')\n",
     "plt.plot(steps, c92_steps, label = '92%')\n",
     "plt.plot(steps, c90_steps, label = '90%')\n",
