added img for NB

--- a/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "**[4]** Ilut plot\n",
     "\n",
-    "Clustering similarity did have a small effect on the proportions of homozygote and heterozygote genotypes. \n",
+    "Clustering similarity did have a small effect on the proportions of homozygote and heterozygote genotypes. As expected, the proportion of heterozygote genotypes decreased and proportion of homozygote genotypes increased with clustering similarity.\n",
     "\n",
     "\n",
     "\n",
