added img for NB

--- a/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -174,12 +174,13 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "os.chdir(\"new_outfiles\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -274,7 +275,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[6]** Extract read depth information by locus from VCF file.\n",
     "\n",
@@ -285,7 +289,9 @@
    "cell_type": "code",
    "execution_count": 217,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -615,7 +621,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "I made an R script that will read the structure file in with adegenet, and then calculate Ho, Hs, and Fis across loci. Script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Scripts/pop_gen_stats.R)."
    ]
@@ -624,7 +633,9 @@
    "cell_type": "code",
    "execution_count": 180,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -646,7 +657,9 @@
    "cell_type": "code",
    "execution_count": 223,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -661,7 +674,9 @@
    "cell_type": "code",
    "execution_count": 224,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -690,7 +705,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Plots\n",
     "\n",
@@ -701,7 +719,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -721,7 +741,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -733,7 +755,9 @@
    "cell_type": "code",
    "execution_count": 225,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -749,7 +773,9 @@
    "cell_type": "code",
    "execution_count": 226,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -810,6 +836,8 @@
    "execution_count": 227,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -843,7 +871,9 @@
    "cell_type": "code",
    "execution_count": 228,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -873,7 +903,9 @@
    "cell_type": "code",
    "execution_count": 229,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -904,7 +936,9 @@
    "cell_type": "code",
    "execution_count": 231,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -913,7 +947,9 @@
    "cell_type": "code",
    "execution_count": 232,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -935,7 +971,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
