--- a/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots_Streamline.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Filtering_and_Plots_Streamline.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -25,17 +25,17 @@
    },
    "outputs": [],
    "source": [
-    "assembly_name = \"CG_l1_25_c84_H\"\n",
+    "assembly_name = \"CG_l1_25_c98_H\"\n",
     "filter_biall = \"TRUE\"\n",
-    "filter_MAF = \"FALSE\"\n",
-    "dir_outfiles = \"/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c84_H_outfiles/\"\n",
+    "filter_MAF = \"TRUE\"\n",
+    "dir_outfiles = \"/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c98_H_outfiles/\"\n",
     "date = \"20170713\"\n",
-    "plot_subtitle = \"84%\""
+    "plot_subtitle = \"98%\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
      "output_type": "stream",
      "text": [
       "Number of individuals after adding fpop = 28.0\n",
-      "Number of loci = 8505\n"
+      "Number of loci = 12511\n"
      ]
     }
    ],
