updated NBs, added script for making refgen fasta, added img for NB

--- a/CRAGIG_combined_lanes/Notebooks/Getting_consensus_seqs_from_alleles_loci_output_files.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Getting_consensus_seqs_from_alleles_loci_output_files.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Getting consensus sequences from alleles.loci files\n",
     "\n",
@@ -13,9 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -32,9 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -55,9 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -74,13 +83,606 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "ex_hash = blocks[0][-1].strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'//                                        -            -                 *    *                     *                         * -                         |5|'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex_hash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'                            -            -                 *    *                     *                         * -                         '"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get indeces with SNPs\n",
+    "seq_mark = ex_hash.split(\"|\")[0][14:]\n",
+    "seq_mark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "char_ind = 0\n",
+    "snp_inds = []\n",
+    "for char in seq_mark:\n",
+    "    if char != \" \":\n",
+    "        snp_inds.append(char_ind)\n",
+    "    char_ind += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[28, 41, 59, 64, 86, 112, 114]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snp_inds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ex_hash = blocks[0][-1].strip()"
+    "# try making data frame out of alignment within locus block with pandas\n",
+    "aln_list_for_df = []\n",
+    "for line in blocks[0][:-1]:\n",
+    "    aln_list_for_df.append(list(line.strip().split()[1]))\n",
+    "block_df = pd.DataFrame(aln_list_for_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>50</th>\n",
+       "      <th>51</th>\n",
+       "      <th>52</th>\n",
+       "      <th>53</th>\n",
+       "      <th>54</th>\n",
+       "      <th>55</th>\n",
+       "      <th>56</th>\n",
+       "      <th>57</th>\n",
+       "      <th>58</th>\n",
+       "      <th>59</th>\n",
+       "      <th>60</th>\n",
+       "      <th>61</th>\n",
+       "      <th>62</th>\n",
+       "      <th>63</th>\n",
+       "      <th>64</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  50 51 52 53 54 55 56 57 58 59 60 61 62 63 64\n",
+       "0  A  C  C  A  G  G  A  C  C  T  T  A  T  A  T\n",
+       "1  A  C  C  A  G  G  A  C  C  T  T  A  T  A  T\n",
+       "2  A  C  C  A  G  G  A  C  C  T  -  -  T  A  T\n",
+       "3  A  C  C  A  G  G  A  C  C  T  -  -  T  A  T\n",
+       "4  A  C  C  A  G  G  A  C  C  T  -  -  T  A  T"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "block_df.iloc[0:5,50:65] # check it out and make sure dashes show up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "length = len(list(block_df.mode()))\n",
+    "sum_seq = \"\"\n",
+    "for i in np.arange(0,length):\n",
+    "    sum_seq += block_df.mode()[i][0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TAAAGCTGTATAGTTGGAGGTGTCTGGGCCTTGTCCCAGCTAGCTAGCTAACCAGGACCT--TATATGTATGGTGTGATGTCCAGATCAGGTCAAGCCTATTTCTGTCCCTACGAAGGACAGAAGCAGTGACCAGTATCT\n"
+     ]
+    }
+   ],
+   "source": [
+    "print sum_seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TAAAGCTGTATAGTTGGAGGTGTCTGGGCCTTGTCCCAGCTAGCTAGCTAACCAGGACCTTATATGTATGGTGTGATGTCCAGATCAGGTCAAGCCTATTTCTGTCCCTACGAAGGACAGAAGCAGTGACCAGTATCT'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_seq.replace(\"-\",\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1  2  3\n",
+       "0  A  T  C  G\n",
+       "1  A  C  C  G\n",
+       "2  C  G  C  G\n",
+       "3  C  G  C  G"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = [['A','T','C','G'],['A','C','C','G'],['C','G','C','G'],['C','G','C','G']]\n",
+    "y_df = pd.DataFrame(y)\n",
+    "y_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0    1    2    3\n",
+       "0  A    G    C    G\n",
+       "1  C  NaN  NaN  NaN"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_df.mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_df.mode()[1][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c82_H_outfiles\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/CG_l1_25_c82_H_outfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# get blocks of alleles separated by locus\n",
+    "infile = open(\"CG_l1_25_c82_H.alleles.loci\",\"r\")\n",
+    "blocks = []\n",
+    "b = []\n",
+    "for line in infile:\n",
+    "    if line.startswith('//'):\n",
+    "        if len(b) > 0:\n",
+    "            b.append(line)\n",
+    "            blocks.append(b)\n",
+    "        b = []\n",
+    "    else:\n",
+    "          b.append(line)\n",
+    "infile.close()\n",
+    "\n",
+    "outfile = open(\"refgen_cragig.fasta\",\"w\")\n",
+    "\n",
+    "for block in blocks:\n",
+    "    for_df = []\n",
+    "    for line in block[:-1]:\n",
+    "        for_df.append(list(line.strip().split()[1]))\n",
+    "    block_df = pd.DataFrame(for_df)\n",
+    "    length = len(list(block_df.mode()))\n",
+    "    sum_seq = \"\"\n",
+    "    for i in np.arange(0,length):\n",
+    "        sum_seq += block_df.mode()[i][0]\n",
+    "    locus_num = block[-1].split(\"|\")[1]\n",
+    "    clean_seq = sum_seq.replace(\"-\",\"\")\n",
+    "    outfile.write(\">\" + locus_num + \"\\n\" + clean_seq + \"\\n\")\n",
+    "\n",
+    "outfile.close()"
    ]
   },
   {
